--- a/style/style.css
+++ b/style/style.css
@@ -70,3 +70,144 @@ ul li a {
     color: #1A0B2E;
 
 }
+.hero {
+    background-image: url(/assets/hero-bg.png);
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    overflow: hidden;
+    
+    
+}
+
+.hero-circle img:not(#micro){
+    width: 18rem;
+    position: absolute;
+    top: 10%;
+    left: 50.5%;
+    transform: translateX(-50%);
+    z-index: 1;
+
+}
+
+#micro {
+    width: auto;
+    height: 10rem;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+@keyframes my-animation {
+    0% {
+        background-color: #FB09B4;
+        width: 110px;
+    }
+
+    25% {
+        background-color: #F7E93F;
+        width: 100px;
+    }
+
+    50% {
+        background-color: #1A0B2E;
+        color: #FFFFFF;
+        width: 100px;
+
+    }
+
+    75% {
+        background-color: beige;
+        color: black;
+        width: 110px;
+    }
+
+    100% {
+        background-color: #00FF88;
+        color: #F7E93F;
+        width: 100px;
+
+
+    }
+}
+
+#new-btn {
+    z-index: 3;
+    position: absolute;
+    background-color: #00FF88;
+    color: #1A0B2E;
+    font-weight: 700;
+    font-size: 18px;
+    padding: 6px 25px;
+    border-radius: 25px;
+    border: none;
+    top: 12%;
+    left: 55%;
+    transform: translate(-50%);
+    animation: my-animation 2s infinite 0.5s ease-in alternate;
+
+}
+
+.hero-content {
+    text-align: center;
+    margin-top: 32rem;
+    padding-bottom: 50px;
+
+}
+
+.hero-content h1 {
+    color: #FFFFFF;
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 12px;
+
+}
+
+.hero-content p {
+    color: #FFFFFF;
+    margin-bottom: 15px;
+}
+
+.btn-1 {
+    padding: 10px 20px;
+    border-radius: 25px;
+    border: none;
+    color: #FFFFFF;
+    background: linear-gradient(360deg, #ffb347, #FB09B4, #9100F8);
+    background-color: #230E3D;
+    cursor: pointer;
+    font-weight: 700;
+    transition: 1s;
+}
+
+.btn-1:hover {
+    background-image: linear-gradient(to bottom, red, yellow);
+    color: #1A0B2E;
+
+}
+
+.btn-2 {
+    padding: 10px 20px;
+    border-radius: 25px;
+    background-color: rgba(0, 0, 0, 0);
+    color: #00FF88;
+    cursor: pointer;
+    font-weight: 700;
+    margin-left: 10px;
+    border: 1px solid #00FF88;
+    transition: 1s;
+}
+
+.btn-2:hover {
+    background-color: #FFFFFF;
+    color: #1A0B2E;
+}
