--- a/style/style.css
+++ b/style/style.css
@@ -329,3 +329,61 @@ ul li a {
     line-height: 24px;
     font-size: 16px;
 }
+
+
+.feature-episode {
+    background-color: #1A0B2E;
+    padding: 100px 0;
+    
+}
+
+.feature-episodeheading h1 {
+    color: #FFFFFF;
+    font-size: 48px;
+    font-weight: bold;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.feature-episode-para {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+  
+    
+}
+
+.feature-episode-icon {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.feature-episode-card {
+    width: 300px;
+    height: 450px;
+    border-radius: 20px;
+    background-color: #351165;
+   
+    
+}
+
+.feature-content {
+    padding: 15px;
+}
+
+.feature-content h2 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+
+.feature-content p {
+    color: #FFFFFF;
+    line-height: 24px;
+}
+
+.feature-content * {
+    margin-bottom: 15px;
+}
