--- a/style/style.css
+++ b/style/style.css
@@ -387,3 +387,77 @@ ul li a {
 .feature-content * {
     margin-bottom: 15px;
 }
+
+
+.meet {
+    background-color: #1A0B2E;
+    padding: 20px 0;
+    padding-bottom: 80px;
+}
+
+.meet-heading h1 {
+    color: #FFFFFF;
+    font-size: 48px;
+    font-weight: bold;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.meet-para {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    padding: 20px;
+}
+
+.meet-content h2 {
+color: #FFFFFF;
+font-weight: bold;
+font-size: 32;
+
+
+}
+
+.meet-content p {
+color: #FFFFFF;
+line-height: 24px;
+
+}
+
+.meet-content * {
+margin-bottom: 15px;
+
+}
+
+.meet-icon i {
+background: linear-gradient(#F7E93F, #FB09B4, #9100F8);
+background-clip: text;
+color: transparent;
+font-size: 20px;
+width: 40px;
+border-radius: 50%;
+height: 40px;
+margin-left: 10px;
+padding-top: 10px;
+border: 1px solid white;
+}
+
+
+.meet-icon {
+gap: 20px;
+}
+
+#meet-host {
+background-color: #351165;
+border-radius: 20px;
+padding: 50px 0;
+}
+
+footer {
+background-image: url(./assets/footer-bg.png);
+width: 100%;
+height: 26.23rem;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
