--- a/style/style.css
+++ b/style/style.css
@@ -107,7 +107,7 @@ ul li a {
     z-index: 2;
 }
 
-@keyframes my-animation {
+@keyframes My-animation {
     0% {
         background-color: #FB09B4;
         width: 110px;
@@ -140,7 +140,7 @@ ul li a {
     }
 }
 
-#new-btn {
+.new-btn {
     z-index: 3;
     position: absolute;
     background-color: #00FF88;
@@ -153,7 +153,7 @@ ul li a {
     top: 12%;
     left: 55%;
     transform: translate(-50%);
-    animation: my-animation 2s infinite 0.5s ease-in alternate;
+    animation: My-animation 2s infinite 0.5s ease-in alternate;
 
 }
 
@@ -460,4 +460,58 @@ height: 26.23rem;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
+}
+
+footer {
+background-image: url(/assets/footer-bg.png);
+width: 100%;
+height: 26.23rem;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
+
+
+#footer-content {
+text-align: center;
+padding-top: 6.5%;
+
+}
+
+.footer-all-para {
+display: flex;
+justify-content: center;
+gap: 2.10rem;
+}
+
+.footer-copy {
+    padding-top: 40px;
+    color: #FFFFFF;
+    font-size: 15px;
+    line-height: 24px
+}
+
+.footer-box p {
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 24px
+}
+
+.footer-box img {
+    width: 24px;
+}
+
+.footer-name h2 {
+    font-size: 70px;
+    color: #FFFFFF;
+    font-weight: 700;
+    padding-bottom: 20px;
+}
+
+#wave {
+    background: linear-gradient(#F7E93F, #FB09B4, #9100F8);
+    background-clip: text;
+    color: transparent;
+
+
 }
