--- a/style/style.css
+++ b/style/style.css
@@ -71,7 +71,7 @@ ul li a {
 
 }
 .hero {
-    background-image: url(../assets/hero-bg.png);
+    background-image: url("../assets/hero-bg.png");
     width: 100%;
     height: 100vh;
     background-position: center;
@@ -454,7 +454,7 @@ padding: 50px 0;
 }
 
 footer {
-background-image: url(../assets/footer-bg.png);
+background-image: url("../assets/footer-bg.png");
 width: 100%;
 height: 26.23rem;
 background-position: center;
@@ -463,7 +463,7 @@ background-size: cover;
 }
 
 footer {
-background-image: url(../assets/footer-bg.png);
+background-image: url("../assets/footer-bg.png");
 width: 100%;
 height: 26.23rem;
 background-position: center;
@@ -1005,7 +1005,7 @@ gap: 2.10rem;
 
 
     footer {
-        background-image: url(../assets/footer-bg.png);
+        background-image: url("../assets/footer-bg.png");
         width: 100%;
         height: 230px;
         background-position: center;
